# tz-proto-vanity

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: docker-publish.yml  rust-release.yml
src/: main.rs
