[package]
name = "tz-proto-vanity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
bs58 = { version="0.4.0", features=["check"] }
generic-array = "0.14.7"
num-bigint = { version = "0.4.3", features = ["rand"] }
rand = "0.8.5"
